# Backend-Python-Bootcamp-Magalu

dio-blog/: blog.db  database.py  main.py  pyproject.toml
dio-blog/controllers/: auth.py  post.py
dio-blog/models/: post.py
dio-blog/schemas/: post.py
dio-blog/services/: post.py
dio-blog/src/schemas/: post.py
dio-blog/views/: post.py
